...
                                <rect key="frame" x="226" y="504" width="148" height="30"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="148" id="Nxp-Qx-nvo"/>
                                    <constraint firstAttribute="height" constant="30" id="lyf-rm-XOk"/>
                                </constraints>
                                <state key="normal" title="Paste From Clipboard"/>
                                <connections>
                                    <action selector="copyFromClipboard:" destination="9pv-A4-QxB" eventType="touchUpInside" id="sIs-qQ-wJH"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Text in English" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w9j-Gp-gwp">
                                <rect key="frame" x="20" y="69" width="184" height="21"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Translated Text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eni-0p-Ajv">
                                <rect key="frame" x="20" y="305" width="560" height="199"/>
                                <animations/>
                                <color key="backgroundColor" red="0.53816658026493491" green="0.86666667461395264" blue="0.043290640779515797" alpha="0.14999999999999999" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" label="translated text"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Hello World!" translatesAutoresizingMaskIntoConstraints="NO" id="Jt2-Gt-X0h">
                                <rect key="frame" x="20" y="98" width="560" height="199"/>
                                <animations/>
                                <color key="backgroundColor" red="0.19551430913084811" green="0.86666667461395264" blue="0.6853633234757871" alpha="0.15675147804054054" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" label="original text"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                <connections>
                                    <outlet property="delegate" destination="9pv-A4-QxB" id="Rhi-bP-eKS"/>
                                </connections>
                            </textView>
...
                            <constraint firstItem="w9j-Gp-gwp" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="5" id="jgj-IB-JU9"/>
                            <constraint firstItem="eni-0p-Ajv" firstAttribute="top" secondItem="Jt2-Gt-X0h" secondAttribute="bottom" constant="8" id="ruG-4C-UtT"/>
                            <constraint firstItem="eni-0p-Ajv" firstAttribute="height" secondItem="Jt2-Gt-X0h" secondAttribute="height" id="v30-vD-Xwa"/>
                            <constraint firstItem="w9j-Gp-gwp" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="wuN-hv-deB"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Spanish" image="first" id="acW-dT-cKf"/>
                    <navigationItem key="navigationItem" title="Translate to Spanish" id="zGw-K1-Y1q">
                        <barButtonItem key="rightBarButtonItem" title="Translate" id="xtN-OV-aVw">
                            <connections>
                                <action selector="translateSelected:" destination="9pv-A4-QxB" id="Pn8-aG-D11"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
...
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="197" id="2Fe-iF-Yxs"/>
                                    <constraint firstAttribute="height" constant="30" id="CdG-se-YFR"/>
                                </constraints>
                                <state key="normal">
                                    <string key="title">Pegar desde el portapapeles
</string>
                                </state>
                                <connections>
                                    <action selector="copyFromClipboard:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="CjR-nU-mfX"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="CCw-gk-VYa" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leadingMargin" id="cXW-Sk-aGv"/>
                            <constraint firstItem="8yI-zd-RaK" firstAttribute="height" secondItem="x4q-gm-8ZF" secondAttribute="height" id="jhY-1B-4pn"/>
                            <constraint firstItem="CCw-gk-VYa" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="5" id="oqy-CS-CBJ"/>
                            <constraint firstItem="x4q-gm-8ZF" firstAttribute="trailing" secondItem="QS5-Rx-YEW" secondAttribute="trailingMargin" id="qbu-tp-9VC"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Ingles" image="second" id="cPa-gy-q4n"/>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="peb-Yp-khJ">
                        <string key="title">Traducir a Ingles
</string>
                        <barButtonItem key="rightBarButtonItem" title="Traducir" id="FnE-70-55v">
                            <connections>
                                <action selector="translateSelected:" destination="8rJ-Kc-sve" id="yXO-uc-JxC"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
...
